<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chan.osrshighscores.MainActivity"
    android:id="@+id/relativeLay"
    >

    <EditText
        android:id="@+id/usernameEdit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="5dp"
        android:background="@drawable/login_edittext"
        android:ems="10"
        android:hint="@string/enter_a_username"
        android:drawableLeft="@drawable/icon"
        android:drawablePadding="5dp"
        android:gravity="left"
        android:maxLength="12"
        android:maxLines="1"

        android:inputType="textNoSuggestions"
        android:imeOptions="actionDone"
        >
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/enter_a_username_to_search"
        android:gravity="center"
        android:maxLines="2"
        android:ellipsize="end"
        android:textSize="20sp"
        android:padding="5dp"
        android:id="@+id/hint"
        />

    <Button
        android:layout_width="75dp"
        android:layout_height="40dp"
        android:padding="5dp"
        android:text="@string/enter"
        android:maxLines="1"
        android:layout_marginRight="15dp"
        android:layout_alignTop="@+id/usernameEdit"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:onClick="enter"
        android:id="@+id/enter"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#d3d3d3"
        android:layout_below="@+id/usernameEdit"
        android:layout_marginTop="5dp"
        android:id="@+id/lineDivide"
        />


    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:background="#d3d3d3"
        android:layout_above="@+id/buttonBar"
        android:id="@+id/lineButton"
        />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/buttonBar"
        >
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="3"
            >
            <Button
                android:background="#ededed"
                android:padding="5dp"
                android:drawableTop="@drawable/icon"
                android:text="@string/search"
                android:layout_weight="1"
                style="@style/button"
                android:maxLines="1"
                android:ellipsize="end"
                />
            <Button
                android:background="#ffffff"
                android:text="@string/compare"
                style="@style/button"
                android:padding="5dp"
                android:drawableTop="@drawable/compare_icon"
                android:layout_weight="1"
                android:onClick="compare"
                android:maxLines="1"
                android:ellipsize="end"
                />
            <Button
                android:background="#ffffff"
                android:text="@string/notes"
                style="@style/button"
                android:padding="5dp"
                android:drawableTop="@drawable/notes_icon"
                android:layout_weight="1"
                android:onClick="notes"
                android:maxLines="1"
                android:ellipsize="end"
                />
        </TableRow>
    </TableLayout>

</RelativeLayout>
