<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".NotesAllActivity"
    >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/lineButtonNotes"
        android:layout_below="@+id/bar"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relativeNote"
            >
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tableNote"
                >
            </TableLayout>
        </RelativeLayout>




    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:background="#d3d3d3"
        android:layout_above="@+id/buttonBarNotes"
        android:id="@+id/lineButtonNotes"
        />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/buttonBarNotes"
        >
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="3"
            >
            <Button
                android:background="#ffffff"
                android:padding="5dp"
                android:drawableTop="@drawable/icon"
                android:text="@string/search"
                android:layout_weight="1"
                style="@style/button"
                android:onClick="search"
                android:maxLines="1"
                android:ellipsize="end"
                />
            <Button
                android:background="#ffffff"
                android:text="@string/compare"
                style="@style/button"
                android:padding="5dp"
                android:drawableTop="@drawable/compare_icon"
                android:layout_weight="1"
                android:onClick="compare"
                android:maxLines="1"
                android:ellipsize="end"
                />
            <Button
                android:background="#ededed"
                android:text="@string/notes"
                style="@style/button"
                android:padding="5dp"
                android:drawableTop="@drawable/notes_icon"
                android:layout_weight="1"
                android:maxLines="1"
                android:ellipsize="end"
                />
        </TableRow>
    </TableLayout>

</RelativeLayout>